Finalizando o front end

--- a/helpdesk/src/app/app.component.html
+++ b/helpdesk/src/app/app.component.html
@@ -1,8 +1,8 @@
-<app-header></app-header>
-<app-menu></app-menu>
-<div class="content-wrapper">
+<app-header [hidden]="!showTemplate"></app-header>
+<app-menu [hidden]="!showTemplate"></app-menu>
+<div [ngClass]="showContentWrapper()">
   <section class="content">
-    <p>Content Here...</p>
+    <router-outlet></router-outlet>
   </section>
 </div>
-<app-footer></app-footer>
+<app-footer [hidden]="!showTemplate"></app-footer>
