--- a/helpdesk/src/app/components/menu/menu.component.html
+++ b/helpdesk/src/app/components/menu/menu.component.html
@@ -1,7 +1,7 @@
 <aside class="main-sidebar">
     <section class="sidebar">
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="treeview" *ngIf="shared.user.profile == 'ADMIN'">
+        <li class="treeview" *ngIf="shared.user.profile == 'ADMIN'"><!---->
           <a href="#">
             <i class="fa fa-edit"></i> <span>Users</span>
             <span class="pull-right-container">
@@ -13,7 +13,7 @@
             <li><a [routerLink]="['/user-new']"><i class="fa fa-circle-o"></i> New User</a></li>
           </ul>
         </li>
-        <li class="treeview" *ngIf="shared.user.profile != 'ADMIN'">
+        <li class="treeview" *ngIf="shared.user.profile != 'ADMIN'">  <!---->
           <a href="#">
             <i class="fa fa-edit"></i> <span>Ticket</span>
             <span class="pull-right-container">
@@ -22,7 +22,7 @@
           </a>
           <ul class="treeview-menu">
             <li><a [routerLink]="['/ticket-list']"><i class="fa fa-circle-o"></i> List</a></li>
-            <li *ngIf="shared.user.profile == 'CUSTOMER'"><a [routerLink]="['/ticket-new']"><i class="fa fa-circle-o"></i> New Ticket</a></li>
+            <li *ngIf="shared.user.profile == 'CUSTOMER'"><a [routerLink]="['/ticket-new']"><i class="fa fa-circle-o"></i> New Ticket</a></li> <!---->
           </ul>
         </li>
         <li class="treeview">
